k-labs/lab03/path-based-ingress/kubia-red-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubiared
  namespace: redblue
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30171
  selector:
    app: kubiared
