k-labs/lab03/path-based-ingress/kubia-rb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubiaredblue
  namespace: redblue
  annotations:
   #Comment the nginx class to use Azure http routing , uncomment addon-http-application-routing 
   #kubernetes.io/ingress.class: "nginx"
   kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    # Change to rb.<azure_dns> 
  - host: rb.c66361a4adc2449aae2b.eastasia.aksapp.io
    http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: kubiablue
            port: 
              number: 80
              
    # Change to rb.<azure_dns>           
  - host: rb.c66361a4adc2449aae2b.eastasia.aksapp.io
    http:          
      paths:
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: kubiared
            port: 
              number: 80
